--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>Pokeno Plumber</title>
+  <link rel="canonical" href="https://pokenoplumber.co.nz/" />
   <meta content="We come equipped to handle every situation and for those specialist jobs, such as drain unblocking we have a drain CCTV camera and the latest jettrodding technology – so you don’t get charged those ‘additional’ fees." name="description">
   <meta content="Pokeno Plumber" property="og:title">
   <meta content="We come equipped to handle every situation and for those specialist jobs, such as drain unblocking we have a drain CCTV camera and the latest jettrodding technology – so you don’t get charged those ‘additional’ fees." property="og:description">
